@@ -1,3 +1,11 @@
+2/28/2013 Jet Goodson <jetgoodson@gmail.com>
+    M visualyze.R
+    - tweaked the labels to be 0-9	
+    M rageAgainstTheSupportVectorMachine.R
+    - modified table output to have different names for different calls to rage
+    M LitteraLector.R
+    - added call to save SVM and reload it as example	
+
 02/26/2013 Katie Malone <cmmalone.158@gmail.com>
     A visualyze.R
     - draws a matrix of prediction vs. truth for SVM
